versioned_docs/version-6.2/client-api/changes/content/_how-to-subscribe-to-counter-changes-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

Following methods allow you to subscribe to counter changes:

- [ForCounter](#forcounter)
- [ForCounterOfDocument](#forcounterofdocument)
- [ForCountersOfDocument](#forcountersofdocument)
- [ForAllCounters](#forallcounters)

## ForCounter

Counter changes can be observed using `ForCounter` method. This will subscribe changes from all counters with a given name, no matter in what document counter was changed.

### Syntax

<TabItem value="counter_changes_1" label="counter_changes_1">
<CodeBlock language="csharp">
{`IChangesObservable<CounterChange> ForCounter(string counterName);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **counterName** | string | Name of a counter to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[CounterChange](#counterchange)&gt; | Observable that allows to add subscriptions to counter notifications. |

### Example

<TabItem value="counter_changes_1_1" label="counter_changes_1_1">
<CodeBlock language="csharp">
{`IDisposable subscription = store
    .Changes()
    .ForCounter("Likes")
    .Subscribe(
        change =>
        \{
            switch (change.Type)
            \{
                case CounterChangeTypes.Increment:
                    // do something
                    break;
            \}
        \});
`}
</CodeBlock>
</TabItem>



## ForCounterOfDocument

Specific counter changes of a given document can be observed using `ForCounterOfDocument` method.

### Syntax

<TabItem value="counter_changes_2" label="counter_changes_2">
<CodeBlock language="csharp">
{`IChangesObservable<CounterChange> ForCounterOfDocument(string documentId, string counterName);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | string | ID of a document to subscribe to. |
| **counterName** | string | Name of a counter to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[CounterChange](#counterchange)&gt; | Observable that allows to add subscriptions to counter notifications. |

### Example

<TabItem value="counter_changes_2_1" label="counter_changes_2_1">
<CodeBlock language="csharp">
{`IDisposable subscription = store
    .Changes()
    .ForCounterOfDocument("companies/1-A", "Likes")
    .Subscribe(
        change =>
        \{
            switch (change.Type)
            \{
                case CounterChangeTypes.Increment:
                    // do something
                    break;
            \}
        \});
`}
</CodeBlock>
</TabItem>



## ForCountersOfDocument

Counter changes of a specified document can be observed using `ForCountersOfDocument` method.

### Syntax

<TabItem value="counter_changes_3" label="counter_changes_3">
<CodeBlock language="csharp">
{`IChangesObservable<CounterChange> ForCountersOfDocument(string documentId);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | string | ID of a document to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[CounterChange](#counterchange)&gt; | Observable that allows to add subscriptions to counter notifications. |

### Example

<TabItem value="counter_changes_3_1" label="counter_changes_3_1">
<CodeBlock language="csharp">
{`IDisposable subscription = store
    .Changes()
    .ForCountersOfDocument("companies/1-A")
    .Subscribe(
        change =>
        \{
            switch (change.Type)
            \{
                case CounterChangeTypes.Increment:
                    // do something
                    break;
            \}
        \});
`}
</CodeBlock>
</TabItem>



## ForAllCounters

Changes for all counters can be observed using `ForAllCounters` method.

### Syntax

<TabItem value="counter_changes_4" label="counter_changes_4">
<CodeBlock language="csharp">
{`IChangesObservable<CounterChange> ForAllCounters();
`}
</CodeBlock>
</TabItem>

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[CounterChange](#counterchange)&gt; | Observable that allows to add subscriptions to counter notifications. |

### Example

<TabItem value="counter_changes_4_1" label="counter_changes_4_1">
<CodeBlock language="csharp">
{`IDisposable subscription = store
    .Changes()
    .ForAllCounters()
    .Subscribe(
        change =>
        \{
            switch (change.Type)
            \{
                case CounterChangeTypes.Increment:
                    // do something
                    break;
            \}
        \});
`}
</CodeBlock>
</TabItem>



## CounterChange

| Name | Type | Description |
| ------------- | ------------- | ----- |
| **Type** | [CounterChangeTypes](#counterchangetypes) | Counter change type enum |
| **Name** | string | Counter name |
| **Value** | long | Counter value after the change |
| **DocumentId** | string | Counter document identifier |
| **ChangeVector** | string | Counter's ChangeVector|



## CounterChangeTypes

| Name | Value |
| ---- | ----- |
| **None** | `0` |
| **Put** | `1` |
| **Delete** | `2` |
| **Increment** | `4` |



## Remarks

<Admonition type="warning" title="">
To get more method overloads, especially ones supporting **delegates**, please add the 
[System.Reactive.Core](https://www.nuget.org/packages/System.Reactive.Core/) package to your project.  
</Admonition>


