versioned_docs/version-7.1/client-api/changes/content/_how-to-subscribe-to-counter-changes-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Panel from "@site/src/components/Panel";
import ContentFrame from "@site/src/components/ContentFrame";

<Admonition type="note" title="">

Subscribe to counter changes using `ForCounter`, `ForCounterOfDocument`,
`ForCountersOfDocument`, or `ForAllCounters`.

<Admonition type="warning" title="">
The `Subscribe` method on the observable these methods return accepts only an `IObserver` object
by default.  
To instead subscribe with a delegate, like the `change => ...` lambda used in the examples below,
add the [System.Reactive](https://www.nuget.org/packages/System.Reactive/) package to your project.  
This adds `Subscribe` overloads that take delegates, including ones with error and
completion handlers.  
</Admonition>

* In this article:
   * [ForCounter](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#forcounter)
   * [ForCounterOfDocument](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#forcounterofdocument)
   * [ForCountersOfDocument](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#forcountersofdocument)
   * [ForAllCounters](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#forallcounters)
   * [CounterChange and CounterChangeTypes syntax](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#counterchange-and-counterchangetypes-syntax)

</Admonition>

<Panel heading="ForCounter">

Counter changes can be observed using `ForCounter` method. This will subscribe changes from all counters with a given name, no matter in what document counter was changed.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<CounterChange> ForCounter(string counterName);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **counterName** | string | Name of a counter to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[CounterChange](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#counterchange-and-counterchangetypes-syntax)&gt; | Observable that allows to add subscriptions to counter notifications. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForCounter("Likes")
    .Subscribe(
        change =>
        {
            switch (change.Type)
            {
                case CounterChangeTypes.Increment:
                    // do something
                    break;
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="ForCounterOfDocument">

Specific counter changes of a given document can be observed using `ForCounterOfDocument` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<CounterChange> ForCounterOfDocument(string documentId, string counterName);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | string | ID of a document to subscribe to. |
| **counterName** | string | Name of a counter to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[CounterChange](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#counterchange-and-counterchangetypes-syntax)&gt; | Observable that allows to add subscriptions to counter notifications. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForCounterOfDocument("companies/1-A", "Likes")
    .Subscribe(
        change =>
        {
            switch (change.Type)
            {
                case CounterChangeTypes.Increment:
                    // do something
                    break;
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="ForCountersOfDocument">

Counter changes of a specified document can be observed using `ForCountersOfDocument` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<CounterChange> ForCountersOfDocument(string documentId);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | string | ID of a document to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[CounterChange](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#counterchange-and-counterchangetypes-syntax)&gt; | Observable that allows to add subscriptions to counter notifications. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForCountersOfDocument("companies/1-A")
    .Subscribe(
        change =>
        {
            switch (change.Type)
            {
                case CounterChangeTypes.Increment:
                    // do something
                    break;
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="ForAllCounters">

Changes for all counters can be observed using `ForAllCounters` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<CounterChange> ForAllCounters();
```
<br />

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[CounterChange](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#counterchange-and-counterchangetypes-syntax)&gt; | Observable that allows to add subscriptions to counter notifications. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForAllCounters()
    .Subscribe(
        change =>
        {
            switch (change.Type)
            {
                case CounterChangeTypes.Increment:
                    // do something
                    break;
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="CounterChange and CounterChangeTypes syntax">

<Tabs>
<TabItem value="CounterChange" label="CounterChange">

**The notification object delivered to subscribers when a counter changes.**

```csharp
class CounterChange
{
    CounterChangeTypes Type
    string Name
    long Value
    string DocumentId
    string CollectionName
    string ChangeVector
}
```
<br />

| Property | Type | Description |
| ------------- | ------------- | ----- |
| **Type** | [CounterChangeTypes](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#counterchange-and-counterchangetypes-syntax) | Counter change type enum |
| **Name** | string | Counter name |
| **Value** | long | Counter value after the change |
| **DocumentId** | string | Counter document identifier |
| **CollectionName** | string | Document's collection name |
| **ChangeVector** | string | Counter's ChangeVector |

</TabItem>
<TabItem value="CounterChangeTypes" label="CounterChangeTypes">

```csharp
enum CounterChangeTypes
{
    None,
    Put,
    Delete,
    Increment,
}
```
<br />

| Name | Value |
| ---- | ----- |
| **None** | `0` |
| **Put** | `1` |
| **Delete** | `2` |
| **Increment** | `4` |

</TabItem>
</Tabs>

</Panel>
